--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,7 @@ body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: #FFF;
     /* background: linear-gradient(0deg, #9F2828, #2f0808);*/
-    background-image: url('https://compass-ssl.xbox.com/assets/3b/92/3b928596-dcf2-4922-85fb-e34f331036f3.jpg?n=Apex-Legends_GLP-Page-Hero-1084_1920x1080_02.jpg');
+    background-image: url('/storage/backgrounds/apex-blank.png');
     margin: 0;
     padding: 0;
     height: 100%;
@@ -13,10 +13,10 @@ body {
 
 h1 {
     font-size: 80px;
-    font-family: 'Poppins', Arial, sans-serif;
+    font-family: 'Blocktastic', Arial, sans-serif;
     font-weight: 600;
     margin: 0;
-    color: white;
+    color: #3b3b3b;
 }
 
 h2 {
@@ -31,8 +31,18 @@ h3 {
     color: #3b3b3b
 }
 
+.flex--container {
+    display: flex;
+    flex-direction: column;
+}
+
 .centered-text {
     text-align: center;
+}
+
+.image--centered {
+    margin: auto;
+    width: 50%;
 }
 
 .button--container {
@@ -41,10 +51,6 @@ h3 {
 
 .button--container * {
     flex-basis: 100%;
-}
-
-.centered {
-    text-align: center;
 }
 
 .centered input,
