Add sessions to insights

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -4,8 +4,7 @@ html,
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: #FFF;
-    /* background: linear-gradient(0deg, #9F2828, #2f0808);*/
-    background-image: url('/storage/backgrounds/apex-blank.png');
+    background: linear-gradient(0deg, #9F2828, #2f0808);
     margin: 0;
     padding: 0;
     height: 100%;
@@ -13,36 +12,24 @@ body {
 
 h1 {
     font-size: 80px;
-    font-family: 'Blocktastic', Arial, sans-serif;
+    font-family: 'Poppins', Arial, sans-serif;
     font-weight: 600;
     margin: 0;
-    color: #3b3b3b;
+    color: white;
 }
 
 h2 {
-    font-family: 'Blocktastic', Arial, sans-serif;
-    font-weight: 600;
-    color: #3b3b3b
+    font-size: 36px;
+    font-family: 'Poppins', Arial, sans-serif;
+    font-weight: 200;
+    margin: 0;
+    color: #151515
 }
 
 h3 {
-    font-family: 'Blocktastic', Arial, sans-serif;
-    margin: 0;
-    color: #3b3b3b
-}
-
-.flex--container {
-    display: flex;
-    flex-direction: column;
-}
-
-.centered-text {
-    text-align: center;
-}
-
-.image--centered {
-    margin: auto;
-    width: 50%;
+    color: white;
+    font-size: 24px;
+    font-family: 'Poppins', Arial, sans-serif;
 }
 
 .button--container {
@@ -53,6 +40,10 @@ h3 {
     flex-basis: 100%;
 }
 
+.centered {
+    text-align: center;
+}
+
 .centered input,
 .centered select {
     margin: 0 10px;
@@ -60,41 +51,27 @@ h3 {
 
 .input--group {
     display: grid;
-    grid-template-columns: 1fr 0.5fr;
+    grid-template-columns: auto auto;
     column-gap: 10px;
     flex-direction: row;
     align-items: center;
-    margin: 25px auto;
-    padding: 10px;
+    margin: 20px auto;
 }
 
 .result--buttons {
     display: flex;
     flex-direction: row;
-    min-height: 125px;
 }
 
 .result--buttons input {
+    background-color: rgb(70, 26, 26);
+    color: white;
     font-weight: 400;
-    font-family: 'Blocktastic', Arial, sans-serif;
-    font-style: italic;
-    font-size: 20px !important;
-    background-color: transparent;
-    margin: 10px;
-    padding-bottom: 10px;
+    font-size: 18px;
+    margin: 20px;
+    padding: 25px;
     min-width: 200px;
-    border: 5px solid #545557;
-    transition: background-color 0.25s, color 0.25s, border 0.25s, font-size 0.25s;
-    font-size: 25px;
-    font-weight: 300;
-    color: #64686b;
-    border-radius: 0;
-}
-
-.result--buttons input:hover {
-    background-color: rgb(255, 255, 255);
-    color: #ff4343;
-    border: 2px solid #545557;
+    border: 1px solid rgb(207, 207, 207);
 }
 
 .bg-red {
@@ -160,8 +137,7 @@ h3 {
     color: #c9f095;
 }
 
-.match--stat h3,
-.match--stat p {
+.match--stat h3, .match--stat p {
     flex: 1;
     margin: auto 0;
 }
